--- a/index.html
+++ b/index.html
@@ -16,27 +16,34 @@
         }
 
         :root {
-            --primary: #ef4444;
-            --secondary: #dc2626;
-            --accent: #f87171;
+            --primary: #3b82f6;
+            --primary-dark: #2563eb;
+            --primary-light: #60a5fa;
+            --secondary: #8b5cf6;
+            --secondary-dark: #7c3aed;
+            --accent: #06b6d4;
             --dark: #0f172a;
             --darker: #020617;
             --light: #f8fafc;
             --gray: #64748b;
+            --gray-light: #cbd5e1;
             --gray-dark: #1e293b;
             --gray-darker: #0f172a;
             --success: #10b981;
             --warning: #f59e0b;
-            --gradient-start: #ef4444;
-            --gradient-end: #dc2626;
-            --card-shadow: rgba(239, 68, 68, 0.1);
+            --gradient-start: #3b82f6;
+            --gradient-mid: #8b5cf6;
+            --gradient-end: #06b6d4;
+            --card-shadow: rgba(59, 130, 246, 0.15);
+            --section-bg: #0f172a;
+            --section-alt: #1e293b;
         }
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             line-height: 1.6;
             color: var(--dark);
-            background: #0f172a;
+            background: var(--darker);
             overflow-x: hidden;
         }
 
@@ -50,7 +57,7 @@
             box-shadow: 0 2px 20px rgba(0,0,0,0.5);
             z-index: 1000;
             padding: 1rem 0;
-            border-bottom: 1px solid rgba(239, 68, 68, 0.2);
+            border-bottom: 1px solid rgba(59, 130, 246, 0.2);
         }
 
         .nav-container {
@@ -65,7 +72,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: 800;
-            background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -124,9 +131,9 @@
             right: 0;
             bottom: 0;
             background: 
-                radial-gradient(circle at 20% 50%, rgba(239, 68, 68, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(220, 38, 38, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 40% 20%, rgba(239, 68, 68, 0.08) 0%, transparent 40%);
+                radial-gradient(circle at 20% 50%, rgba(59, 130, 246, 0.15) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(139, 92, 246, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 40% 20%, rgba(6, 182, 212, 0.08) 0%, transparent 40%);
             animation: pulse-glow 8s ease-in-out infinite;
         }
 
@@ -152,34 +159,47 @@
             font-weight: 800;
             margin-bottom: 1rem;
             line-height: 1.2;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .hero .subtitle {
             font-size: 1.5rem;
             margin-bottom: 1rem;
             opacity: 0.95;
+            color: var(--gray-light);
         }
 
         .hero .location {
             font-size: 1.1rem;
             margin-bottom: 2rem;
             opacity: 0.9;
+            color: var(--gray-light);
         }
 
         .status-badge {
             display: inline-block;
-            background: var(--success);
+            background: linear-gradient(135deg, var(--success), var(--accent));
             color: white;
             padding: 0.5rem 1.5rem;
             border-radius: 50px;
             font-weight: 600;
             margin-bottom: 2rem;
             animation: pulse 2s infinite;
+            box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);
         }
 
         @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.8; }
+            0%, 100% { 
+                transform: scale(1);
+                box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);
+            }
+            50% { 
+                transform: scale(1.05);
+                box-shadow: 0 6px 20px rgba(16, 185, 129, 0.5);
+            }
         }
 
         .cta-buttons {
@@ -204,12 +224,12 @@
         .btn-primary {
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
-            box-shadow: 0 4px 15px rgba(239, 68, 68, 0.3);
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.3);
         }
 
         .btn-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(239, 68, 68, 0.4);
+            box-shadow: 0 8px 25px rgba(59, 130, 246, 0.4);
         }
 
         .btn-secondary {
@@ -232,11 +252,11 @@
         }
 
         section:not(#contact):not(.hero) {
-            background: #1e293b;
+            background: var(--section-alt);
         }
 
         section:nth-child(even):not(#contact):not(.hero) {
-            background: #0f172a;
+            background: var(--section-bg);
         }
 
         .section-title {
@@ -256,7 +276,7 @@
             transform: translateX(-50%);
             width: 100px;
             height: 4px;
-            background: linear-gradient(90deg, var(--gradient-start), var(--gradient-end));
+            background: linear-gradient(90deg, var(--gradient-start), var(--gradient-mid), var(--gradient-end));
             border-radius: 2px;
         }
 
@@ -291,12 +311,24 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
             text-align: center;
             transition: transform 0.3s, box-shadow 0.3s;
-            border: 1px solid rgba(239, 68, 68, 0.2);
+            border: 1px solid rgba(59, 130, 246, 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .stat-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, var(--gradient-start), var(--gradient-mid), var(--gradient-end));
         }
 
         .stat-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 30px rgba(239, 68, 68, 0.3);
+            box-shadow: 0 8px 30px rgba(59, 130, 246, 0.3);
             border-color: var(--primary);
         }
 
@@ -321,7 +353,7 @@
             padding: 3rem;
             border-radius: 16px;
             box-shadow: 0 4px 30px rgba(0,0,0,0.5);
-            border: 1px solid rgba(239, 68, 68, 0.1);
+            border: 1px solid rgba(59, 130, 246, 0.1);
         }
 
         .skills-grid {
@@ -343,24 +375,24 @@
         }
 
         .skill-tag {
-            background: linear-gradient(135deg, var(--gradient-start), var(--gradient-end));
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
             padding: 0.5rem 1rem;
             border-radius: 20px;
             font-size: 0.9rem;
             font-weight: 500;
-            box-shadow: 0 2px 8px rgba(239, 68, 68, 0.3);
+            box-shadow: 0 2px 8px rgba(59, 130, 246, 0.3);
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
         .skill-tag:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(239, 68, 68, 0.5);
+            box-shadow: 0 4px 12px rgba(59, 130, 246, 0.5);
         }
 
         /* Projects Section */
         #projects {
-            background: #0f172a;
+            background: var(--section-bg);
         }
 
         .projects-grid {
@@ -375,17 +407,17 @@
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0,0,0,0.5);
             transition: transform 0.3s, box-shadow 0.3s;
-            border: 1px solid rgba(239, 68, 68, 0.1);
+            border: 1px solid rgba(59, 130, 246, 0.1);
         }
 
         .project-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 10px 40px rgba(239, 68, 68, 0.3);
+            box-shadow: 0 10px 40px rgba(59, 130, 246, 0.3);
             border-color: var(--primary);
         }
 
         .project-header {
-            background: linear-gradient(135deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
+            background: linear-gradient(135deg, var(--gradient-start) 0%, var(--gradient-mid) 50%, var(--gradient-end) 100%);
             color: white;
             padding: 2rem;
         }
@@ -418,13 +450,13 @@
         }
 
         .tech-badge {
-            background: rgba(239, 68, 68, 0.1);
-            color: #fca5a5;
+            background: rgba(59, 130, 246, 0.1);
+            color: var(--primary-light);
             padding: 0.3rem 0.8rem;
             border-radius: 12px;
             font-size: 0.85rem;
             font-weight: 600;
-            border: 1px solid rgba(239, 68, 68, 0.3);
+            border: 1px solid rgba(59, 130, 246, 0.3);
         }
 
         .project-links {
@@ -448,11 +480,11 @@
         }
 
         .link-primary:hover {
-            background: var(--secondary);
+            background: var(--primary-dark);
         }
 
         .link-secondary {
-            background: rgba(239, 68, 68, 0.1);
+            background: rgba(59, 130, 246, 0.1);
             color: var(--primary);
             border: 2px solid var(--primary);
         }
@@ -475,7 +507,7 @@
             top: 0;
             bottom: 0;
             width: 3px;
-            background: linear-gradient(180deg, var(--gradient-start), var(--gradient-end));
+            background: linear-gradient(180deg, var(--gradient-start), var(--gradient-mid), var(--gradient-end));
         }
 
         .timeline-item {
@@ -485,7 +517,7 @@
             background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
             border-radius: 12px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.5);
-            border: 1px solid rgba(239, 68, 68, 0.1);
+            border: 1px solid rgba(59, 130, 246, 0.1);
         }
 
         .timeline-item::before {
@@ -568,8 +600,8 @@
             right: 0;
             bottom: 0;
             background: 
-                radial-gradient(circle at 30% 20%, rgba(239, 68, 68, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 70% 80%, rgba(220, 38, 38, 0.1) 0%, transparent 50%);
+                radial-gradient(circle at 30% 20%, rgba(59, 130, 246, 0.15) 0%, transparent 50%),
+                radial-gradient(circle at 70% 80%, rgba(139, 92, 246, 0.1) 0%, transparent 50%);
             pointer-events: none;
         }
 
@@ -598,7 +630,7 @@
             padding: 2rem;
             border-radius: 12px;
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(239, 68, 68, 0.2);
+            border: 1px solid rgba(59, 130, 246, 0.2);
             transition: all 0.3s;
         }
 
@@ -643,14 +675,14 @@
             color: white;
             text-decoration: none;
             transition: all 0.3s;
-            border: 2px solid rgba(239, 68, 68, 0.3);
+            border: 2px solid rgba(59, 130, 246, 0.3);
         }
 
         .social-link:hover {
             background: var(--primary);
             border-color: var(--primary);
             transform: translateY(-5px);
-            box-shadow: 0 5px 20px rgba(239, 68, 68, 0.4);
+            box-shadow: 0 5px 20px rgba(59, 130, 246, 0.4);
         }
 
         /* Footer */
@@ -988,14 +1020,14 @@
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                     </svg>
                 </a>
-                <a href="https://github.com/yourusername" class="social-link" title="GitHub">
+                <a href="https://github.com/yourprofile" class="social-link" title="GitHub">
                     <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
                 </a>
-                <a href="mailto:tungatadube@gmail.com" class="social-link" title="Email">
+                <a href="https://twitter.com/yourprofile" class="social-link" title="Twitter">
                     <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                        <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z"/>
                     </svg>
                 </a>
             </div>
@@ -1005,66 +1037,6 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Mduduzi Frederick Dube. All rights reserved.</p>
-        <p style="margin-top: 0.5rem;">Built with ❤️ in Adelaide, Australia</p>
     </footer>
-
-    <script>
-        // Smooth scroll for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Add active state to navigation on scroll
-        window.addEventListener('scroll', () => {
-            let current = '';
-            const sections = document.querySelectorAll('section');
-            
-            sections.forEach(section => {
-                const sectionTop = section.offsetTop;
-                const sectionHeight = section.clientHeight;
-                if (pageYOffset >= (sectionTop - 200)) {
-                    current = section.getAttribute('id');
-                }
-            });
-
-            document.querySelectorAll('.nav-links a').forEach(link => {
-                link.classList.remove('active');
-                if (link.getAttribute('href').slice(1) === current) {
-                    link.classList.add('active');
-                }
-            });
-        });
-
-        // Add animation on scroll
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1';
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        }, observerOptions);
-
-        document.querySelectorAll('.project-card, .timeline-item, .stat-card').forEach(el => {
-            el.style.opacity = '0';
-            el.style.transform = 'translateY(20px)';
-            el.style.transition = 'all 0.6s ease-out';
-            observer.observe(el);
-        });
-    </script>
 </body>
 </html>
