fix: changes availability

--- a/index.html
+++ b/index.html
@@ -778,8 +778,10 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <div class="status-badge">🟢 Available for Immediate Employment</div>
-                <h1>Mduduzi Frederick Dube</h1>
+                
+<div class="status-badge">🚀 Open to Opportunities</div>
+
+<h1>Mduduzi Frederick Dube</h1>
                 <p class="subtitle">Backend Software Engineer | Java & Spring Boot Specialist</p>
                 <p class="location">📍 Adelaide, South Australia</p>
                 <p style="font-size: 1.1rem; margin-bottom: 2rem;">
