fix: removes country

--- a/index.html
+++ b/index.html
@@ -957,9 +957,9 @@
                 <div class="timeline-header">
                     <div>
                         <h3>Senior Software Engineer</h3>
-                        <p class="timeline-company">Ecocash Holdings Zimbabwe</p>
+                        <p class="timeline-company">Ecocash Holdings</p>
                     </div>
-                    <span class="timeline-date">Jan 2020 - Sep 2024</span>
+                    <span class="timeline-date">Jan 2020 - Sep 2025</span>
                 </div>
                 <p class="timeline-description">
                     Led backend engineering initiatives for enterprise fintech platform processing $2B+ in annual transactions across multiple African markets.
